cholera 0.6.0.9020
==================

- make output of print methods clearer.


cholera 0.6.0.9019
==================

- limit isoLines() and isoVertices() and sim.walking.distance to pump #7.


cholera 0.6.0.9018
==================

- test selective printing of individual polygons.


cholera 0.6.0.9017
==================

- fix computed time in nearestPump() and amend sim.walking.distance.
- test new isobands in isoLines().


cholera 0.6.0.9016
==================

- deprecate pearlString() in favor of travelingSalesman().


cholera 0.6.0.9015
==================

- add output argument to voronoiPolygons().
- number of bands in isoLines() set by 'RColorBrewer' palette's maxcolors.
- polygon() based plot.iso() method for isoVertices().


cholera 0.6.0.9014
==================

- add isoVertices() prototype.
- isolines() -> isoLines().
- enable palette argument in isoLines().


cholera 0.6.0.9013
==================

- enable col argument in addRoads().


cholera 0.6.0.9012
==================

- add isolines() prototype.


cholera 0.6.0.9011
==================

- add pos argument to addCase().
- fix plot.walking_path() for observed = FALSE.


cholera 0.6.0.9010
==================

- add sim.walking.distance dataset prototype.
- remove sim.dist dataset prototype.


cholera 0.6.0.9009
==================

- exclude landmarks from case.set - "expected".


cholera 0.6.0.9008
==================

- add sim.dist data set prototype.
- add pch and point.size arguments to addNeighborhoodCases().


cholera 0.6.0.9007
==================

- rename deldirVertices() back to voronoiPolygons().


cholera 0.6.0.9006
==================

- add distance.unit argument to addWhitehead().


cholera 0.6.0.9005
==================

- add nearestPump(metric = "euclidean").


cholera 0.6.0.9004
==================

- fix case.location = "address" for plot.euclidean_path().


cholera 0.6.0.9003
==================

- fix city squares for plot.euclidean_path().


cholera 0.6.0.9002
==================
