@@ -24,6 +24,9 @@ S3method(print,walking_path)
 S3method(pumpCase,euclidean)
 S3method(pumpCase,voronoi)
 S3method(pumpCase,walking)
+S3method(summary,euclidean)
+S3method(summary,voronoi)
+S3method(summary,walking)
 export(addCase)
 export(addDelauny)
 export(addEuclideanPath)
